# coredal

./: CMakeLists.txt
apps/: list_apps.cxx
cmake/: coredalConfig.cmake.in
docs/: README.md
include/coredal/: disabled-components.hpp  util.hpp
schema/coredal/: AlmostEverything.view.xml  ReadoutMap.view.xml  dunedaq.schema.xml
scripts/: app_environment.py
src/: dalMethods.cpp  disabled-components.cpp  generate_modules.cpp
test/apps/: disable_test.cxx  genDLH.cxx  genReadoutModules.cxx
